--- a/templates/alias.html
+++ b/templates/alias.html
@@ -19,8 +19,8 @@
                 <span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>TAD</strong></span>
               </div>
             </div> 
-						<div class="row clearfix" style="margin-bottom: 10px; display:flex; align-items: center">
-							<div class="col-xs-5 col-md-8">
+						<div class="row clearfix operations">
+							<div class="save-add col-xs-12 col-sm-6 col-md-8">
                 <!-- Add button -->
 								<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddAlias()" class="btn btn-md btn-outline item-button">
 									<span style="font-size: 17px;" class="glyphicon glyphicon-plus"></span>
@@ -33,7 +33,7 @@
 								</a>
               </div>
               <!-- Search field -->
-							<div class="col-xs-7 col-md-4">
+							<div class="search col-xs-12 col-sm-6 col-md-4">
 								<div class="form-group has-feedback" style="margin-bottom: 0">
 								<input type="text" class="form-control" ng-model="filterValue" ng-change="filterAlias(filterValue)" placeholder="Search...">
 									<span class="glyphicon glyphicon-search form-control-feedback"></span>
