--- a/templates/home.html
+++ b/templates/home.html
@@ -2,21 +2,22 @@
     <div id="top" class="home-main">
       <div class="clearfix">
         <!-- SECTION: Logo -->
-        <div class="row">
+        <div class="row home-logo">
         	<!-- Load side menu -->
-          <div id="side-panel-scrollbar" class="col-md-2">
-            <div ng-include="'templates/side-panel-menu.html'"></div>
-          </div>
           <div class="col-xs-12">
             <div class="home-header">
               <div class="logo">
                 <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="120" width="120">
               </div>
-              <h1 class="animated fadeIn">opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
+              <h1 class="animated fadeIn">opal <strong>ADMIN</strong></h1>
             </div>
           </div>
+        </div>
+        <!-- Load side menu -->
+        <div class="home-side-panel col-xs-12">
+          <div ng-include="'templates/side-panel-menu.html'"></div>
         </div>    
-        <div class="row" >
+        <div class="row home-menu" ng-controller="navigationController">
           <!-- Publishing tools -->
 					<div class="col-xs-12 col-md-6" ng-if="isAuthorized([userRoles.admin])">
 						<div class="row">
@@ -30,12 +31,12 @@
 
             <!-- SECTION: Tasks/Appointments/Documents -->
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
-							<div class="col-xs-6">
-								<div class="main-menu panel-container animated" ng-class="{pulse: hoverAliasMenu}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
-									<div class="panel-info" style="height: 180px;">
+							<div class="col-xs-12 col-sm-6">
+								<div class="panel-container animated" ng-class="{pulse: hoverAliasMenu}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+												<span  class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Tasks/Appts/Docs</h1>
@@ -49,12 +50,12 @@
               </div>
               
               <!-- SECTION: Posts -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverPostMenu}" ng-mouseenter="hoverPostMenu=true" ng-mouseleave="hoverPostMenu=false" style="cursor:pointer;" ng-click="goToPost()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+												<span  class="glyphicon glyphicon-comment" aria-hidden="true"></span>
 											</div>   
 											<div class="panel-title">  
 												<h1>Posts</h1>
@@ -68,12 +69,12 @@
               </div>
               
               <!-- SECTION: Eductional material -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverEduMatMenu}" ng-mouseenter="hoverEduMatMenu=true" ng-mouseleave="hoverEduMatMenu=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-book" aria-hidden="true"></span>     
+												<span  class="glyphicon glyphicon-book" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Edu Material</h1>
@@ -87,12 +88,12 @@
               </div> 
               
               <!-- SECTION: Hospital maps -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverHosMapMenu}" ng-mouseenter="hoverHosMapMenu=true" ng-mouseleave="hoverHosMapMenu=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-map" aria-hidden="true"></span>
+												<span  class="fa fa-map" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Hospital Maps</h1>
@@ -106,12 +107,12 @@
               </div>
               
               <!-- SECTION: Notifications -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverNotificationMenu}" ng-mouseenter="hoverNotificationMenu=true" ng-mouseleave="hoverNotificationMenu=false" style="cursor:pointer;" ng-click="goToNotification()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-bell" aria-hidden="true"></span>
+												<span  class="glyphicon glyphicon-bell" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Notifications</h1>
@@ -125,12 +126,12 @@
               </div>
               
               <!-- SECTION: Test results -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverTestResultMenu}" ng-mouseenter="hoverTestResultMenu=true" ng-mouseleave="hoverTestResultMenu=false" style="cursor:pointer;" ng-click="goToTestResult()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-heartbeat" aria-hidden="true"></span>
+												<span  class="fa fa-heartbeat" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Test Results</h1>
@@ -144,12 +145,12 @@
               </div>
               
               <!-- SECTION: Questionnaires -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-pencil-square-o" aria-hidden="true"></span>     
+												<span  class="fa fa-pencil-square-o" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Questionnaires</h1>
@@ -163,12 +164,12 @@
               </div>
               
               <!-- SECTION: Email -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverEmailMenu}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-envelope" aria-hidden="true"></span>     
+												<span  class="fa fa-envelope" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Email</h1>
@@ -182,12 +183,12 @@
 							</div> 
 
 							 <!-- SECTION: Legacy Questionnaire -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverLegacyQuestionnaireMenu}" ng-mouseenter="hoverLegacyQuestionnaireMenu=true" ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToLegacyQuestionnaire()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-pencil-square" aria-hidden="true"></span>     
+												<span  class="fa fa-pencil-square" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Legacy Questionnaires</h1>
@@ -216,12 +217,12 @@
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 
 							<!-- SECTION: Diagnosis translation control -->
-							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverDiagnosisMenu}" ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false" style="cursor:pointer;" ng-click="goToDiagnosisTranslation()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-stethoscope" aria-hidden="true"></span>
+												<span  class="fa fa-stethoscope" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Diagnosis Translation</h1>
@@ -235,12 +236,12 @@
               </div>
 
               <!-- SECTION: Cron control -->
-							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverCronMenu}" ng-mouseenter="hoverCronMenu=true" ng-mouseleave="hoverCronMenu=false" style="cursor:pointer;" ng-click="goToCron()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-time" aria-hidden="true"></span>
+												<span  class="glyphicon glyphicon-time" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Cron</h1>
@@ -254,12 +255,12 @@
               </div>
               
               <!-- SECTION: Patient -->
-							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverPatientMenu}" ng-mouseenter="hoverPatientMenu=true" ng-mouseleave="hoverPatientMenu=false" style="cursor:pointer;" ng-click="goToPatient()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-address-card" aria-hidden="true"></span>
+												<span  class="fa fa-address-card" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Patients</h1>
@@ -273,12 +274,12 @@
               </div>
               
               <!-- SECTION: Patient registration -->
-							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
+							<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
 								<div class="panel-container animated" ng-class="{pulse: hoverPatRegMenu}" ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-address-card" aria-hidden="true"></span>
+												<span  class="fa fa-address-card" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Patient Registration</h1>
@@ -292,12 +293,12 @@
               </div>
               
               <!-- SECTION: Patient registration -->
-							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverPatActivityMenu}" ng-mouseenter="hoverPatActivityMenu=true" ng-mouseleave="hoverPatActivityMenu=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-hourglass-half" aria-hidden="true"></span>
+												<span  class="fa fa-hourglass-half" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Patient Activity</h1>
@@ -311,12 +312,12 @@
               </div>
               
               <!-- SECTION: Users -->
-							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverUserMenu}" ng-mouseenter="hoverUserMenu=true" ng-mouseleave="hoverUserMenu=false" style="cursor:pointer;" ng-click="goToUsers()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="fa fa-users" aria-hidden="true"></span>
+												<span  class="fa fa-users" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Users</h1>
@@ -344,12 +345,12 @@
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 
               <!-- SECTION: Account settings -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverAccountMenu}" ng-mouseenter="hoverAccountMenu=true" ng-mouseleave="hoverAccountMenu=false" style="cursor:pointer;" ng-click="goToAccount()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+												<span  class="glyphicon glyphicon-cog" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Account</h1>
@@ -363,12 +364,12 @@
               </div>
               
               <!-- SECTION: Logout -->
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverLogoutMenu}" ng-mouseenter="hoverLogoutMenu=true" ng-mouseleave="hoverLogoutMenu=false" style="cursor:pointer;" ng-click="goToLogout()">
-									<div class="panel-info" style="height: 180px;">
+									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+												<span  class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Logout</h1>
