--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -5,10 +5,10 @@
                 <div class="logo">
                   <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
                 </div>
-                <h1>opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
+                <h1>opal <strong>ADMIN</strong></h1>
               </div>
             </div> 
-            <div id="side-panel-scroll" class="row" style="overflow-y: auto; max-height: 80vh;">     
+            <div id="side-panel-scroll" class="row">     
               <!-- Publishing tools -->
               <div class="clearfix">
                 <div class="side-menu-title">
